syntax = "proto3";

package istio.mixer.template.list;

import "mixer/v1/template/extensions.proto";
import "mixer/v1/template/standard_types.proto";

option (istio.mixer.v1.template.template_variety) = TEMPLATE_VARIETY_CHECK;

message Template {
    // value is ...
    istio.mixer.v1.template.Value value = 1;
    // dimensions are ...
    map<string, istio.mixer.v1.template.Value> dimensions = 2;

    int64 int64Primitive = 3;

    bool boolPrimitive = 4;

    double doublePrimitive = 5;

    string stringPrimitive = 6;

    istio.mixer.v1.template.Value anotherValueType = 7;

    map<string, int64> dimensionsFixedInt64ValueDType = 8;

    string check_expression = 9;

    Res1 res1 = 11;
}

message Res1 {
    istio.mixer.v1.template.Value value = 1;
    map<string, istio.mixer.v1.template.Value> dimensions = 2;

    int64 int64Primitive = 3;

    bool boolPrimitive = 4;

    double doublePrimitive = 5;

    string stringPrimitive = 6;

    map<string, int64> int64Map = 7;

    istio.mixer.v1.template.TimeStamp timeStamp = 9;

    istio.mixer.v1.template.Duration duration = 10;

    Res2 res2 = 11;

    map<string, Res2> res2_map = 12;
}

message Res2 {
    istio.mixer.v1.template.Value value = 1;
    map<string, istio.mixer.v1.template.Value> dimensions = 2;

    int64 int64Primitive = 3;

    istio.mixer.v1.template.TimeStamp timeStamp = 9;

    istio.mixer.v1.template.Duration duration = 10;

    istio.mixer.v1.template.IPAddress ip_addr = 11;

    istio.mixer.v1.template.DNSName dns_name = 12;

    istio.mixer.v1.template.EmailAddress email_addr = 13;

    istio.mixer.v1.template.Uri uri = 14;
}
